# stock-database

./: .gitignore  COMMANDS.md  README.md  pyproject.toml  queries.sql
.claude/: status-command.sh
.claude/commands/: download-and-run.md
.dev-resources/prompts/: .txt
.devcontainer/: devcontainer.json  setup.sh
config/: stock-data-1d.toml  stock-data-1mo.toml  stock-data-1wk.toml  stock-data-30m.toml  stock-data.toml
market-data/backtest/: bakeoff-2026-06-14.csv  bakeoff-2026-06-14.md
market-data/metadata/: symbols.csv
output/: 26-06-15.txt  26-06-16-0238-1h.md  26-06-16-1414-1h.md  26-06-17-0227-1h.md  26-06-18-0238-1h.md  26-06-18-0900-1h.md  26-06-18-1525-1h.md  26-06-27-1727-1h.md  26-06-30-1401-1h.md  26-06-30-1638-1h.md
output/risk-research/: HANDOFF.md  derisk_backtest.py  derisk_sweep.py  portfolio_system.py  pullback_backtest.py  pullback_struct.py
scripts/: bullish_dip_regain_scan.py  download.sh  remove_duplicates.py  rounding_bottom_scan.py
scripts/kite/: COMMANDS.md  __init__.py  auth.py  client.py  credentials.py  (+4 more)
tests/: test_analyze_chart_structure.py  test_cli.py  test_config.py  test_documentation.py  test_find_similar_stock_setups.py  test_indicator_service.py  test_indicator_storage.py  test_indicators.py  test_intervals.py  test_kite_auth.py  test_kite_client.py  test_kite_credentials.py  test_kite_entrypoints.py  test_kite_orders.py  test_kite_placement.py  test_logging_config.py  test_market_time.py  test_normalization.py  test_package.py  test_service.py  test_storage.py  test_symbols.py  test_talk_to_stock_data.py  test_yahoo.py
(+134 files in other folders)
