[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-data-repository"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "TA-Lib>=0.6",
  "kiteconnect>=5.2,<6",
  "polars>=1.0",
  "pydantic>=2.0",
  "typer>=0.12",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "ruff>=0.6"]

[project.scripts]
stock-data = "stock_data.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"
